2003-08-26  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/regression/bar-number.ly: remove unnecessary old-relative
	options.
	
	* Documentation/user/internals.itely (Creating contexts): document
	\newcontext

	* lily/parser.yy (Composite_music): add \newcontext

	* Documentation/user/refman.itely (MIDI block): add note about
	dotted tempos.

	* scm/font.scm: remove old markup legacy

	* GNUmakefile.in (web-clean): remake share/ after web-clean.

	* lily/breathing-sign.cc (brew_molecule): remove function

	* lily/text-item.cc: remove old-style markups.
	(interpret_markup): C++ version of markup function
	(brew_molecule): idem.

	* lily/my-lily-lexer.cc (start_main_input): define input-file-name
	as Scheme variable.

	* scripts/convert-ly.py (conv): dashes rule.
	Apply rule.

	* Documentation/user/lilypond-book.itely: syntax fixes. 

2003-08-25  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION (PACKAGE_NAME): release 1.9.0

	* Documentation/user/lilypond-book.itely (Invoking lilypond-book):
	note about dvips. (Should backport.)

	* scripts/convert-ly.py
	(FatalConversionError.articulation_substitute): add
	convert-new-chords code. Remove convert-new-chords.py

	* Documentation/user/refman.itely (Octave check): document
	\octave.

	* Documentation/topdocs/NEWS.texi: add \octave, postfix and
	\relative changes.

	* lily/parser.yy (command_element): octave check:

	   \octave PITCH

	checks that PITCH (without octave) yields PITCH (with octave) in
	\relative

	* lily/relative-octave-music.cc (to_relative_octave): octave check.

	* lily/scm-option.cc: ly:set-option now has the default argument
	#t.

	* lily/lexer.ll: add \renameinput

	* python/lilylib.py (command_name): robustifications.

	* scripts/ly2dvi.py (run_latex): use >& for redirection iso. of
	/dev/stderr. This is ash compatible.

	* ly/init.ly: add warning if compatibility was not necessary.

	* lily/scm-option.cc (LY_DEFINE): add ly:get-option

	* flower/include/string-handle.icc: formatting cleanups, rename